--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "winston": "^3.14.2"
   },
   "devDependencies": {
+    "@types/chokidar": "^2.1.3",
     "@types/express": "^4.17.17",
     "@types/fluent-ffmpeg": "^2.1.25",
     "@types/jest": "^29.5.1",
@@ -36,6 +37,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
